--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    {% if construction.building.name != 'Tierras' %}
+                    {% if not loop.first %}
                     <form id="construction{{ construction.id }}" name="construction{{ construction.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_territory_demolish') }}" method="post">
                         <div class="form-group has-feedback">
                             <div class="input-group">
