--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -20,17 +20,17 @@
                 <div class="info">
                     <h1 class="text-center">{{ player.nick }}</h1>
                     {% for progress in progresses %}
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-{{ progress.class }} progress-bar-striped" role="progressbar" aria-valuenow="{{ progress.researchs }}" aria-valuemin="0" aria-valuemax="{{ progress.total }}" style="min-width:0em; width: {{ progress.researchs / progress.total * 100 }}%">
-                            <span>{{ progress.researchs }}/{{ progress.total }}</span>
+                    <div class="col-xs-12">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-{{ progress.class }} progress-bar-striped" role="progressbar" aria-valuenow="{{ progress.researchs }}" aria-valuemin="0" aria-valuemax="{{ progress.total }}" style="min-width:0em; width: {{ progress.researchs / progress.total * 100 }}%">
+                                <span>{{ progress.researchs }}/{{ progress.total }}</span>
+                            </div>
                         </div>
                     </div>
                     {% endfor %}
                     {% for i in 1..6 %}
-                    <div class="col-xs-6 col-md-2 text-center">
-                        <i class="fa fa-fw fa-4x fa-trophy"></i>
-                        <br/>
-                        Logro
+                    <div class="col-xs-12 col-md-4 text-center">
+                        <button type="button" class="ribbon btn btn-default"><i class="fa fa-fw fa-lg fa-trophy"></i>Default</button>
                     </div>
                     {% endfor %}
                 </div>
