--- a/src/Archmage/GameBundle/Resources/views/Home/login.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/login.html.twig
@@ -12,7 +12,9 @@
             <input type="password" class="form-control" placeholder="Contraseña" required />
             <button class="btn btn-lg btn-default btn-block" type="submit"><i class="fa fa-fw fa-lg fa-sign-in"></i> Entrar</button>
         </form>
-        <a href="#">Registrar</a> - <a href="#">Recuperar</a> - <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
+        <a href="{{ path('fos_user_security_login') }}">Registro</a> -
+        <a href="#">Password</a> -
+        <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
         <br/><br/>
         <div class="row">
             {% for faction in factions %}
