--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -28,11 +28,24 @@
                         </div>
                     </div>
                     {% endfor %}
-                    {% for i in 1..6 %}
-                    <div class="col-xs-12 col-md-4 text-center">
-                        <button type="button" class="ribbon btn btn-default"><i class="fa fa-fw fa-lg fa-trophy"></i>Default</button>
+                    <div class="col-xs-12 col-md-5 text-center">
+                        <div class="alert alert-warning ribbon"><i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado</div>
                     </div>
-                    {% endfor %}
+                    <div class="col-xs-12 col-md-5 col-md-offset-2 text-center">
+                        <div class="alert alert-danger ribbon"><i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado</div>
+                    </div>
+                    <div class="col-xs-12 col-md-5 text-center">
+                        <div class="alert alert-success ribbon"><i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado</div>
+                    </div>
+                    <div class="col-xs-12 col-md-5 col-md-offset-2 text-center">
+                        <div class="alert alert-info ribbon"><i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado</div>
+                    </div>
+                    <div class="col-xs-12 col-md-5 text-center">
+                        <div class="alert alert-primary ribbon"><i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado</div>
+                    </div>
+                    <div class="col-xs-12 col-md-5 col-md-offset-2 text-center">
+                        <div class="alert alert-default ribbon"><i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado</div>
+                    </div>
                 </div>
             </div>
         </div>
